# fireball-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO-EMAIL  data-2020-01-21  data-2020-09-13  db.json  db.json.bak  pairwise_demo.scad  plot.p  plot.r
.github/workflows/: rust.yml
altitudes/: Cargo.toml
altitudes/src/: main.rs
azimuth-corrector/: Cargo.toml
azimuth-corrector/src/: main.rs
benches/: lambda.rs
common/: Cargo.toml
common/src/: constants.rs  histogram.rs  lib.rs  maths.rs  obs_data.rs  one_dim_search.rs  plot.rs  quick_median.rs  structs.rs  utils.rs
common/src/structs/: geodetic.rs  line.rs  vec3.rs
da-corrector/: Cargo.toml  log.txt  run.sh
da-corrector/src/: main.rs
data/: arkansas-usa-2021-02-25.toml  botswana-2018-06-02.toml  bourges-2023-09-09.toml  brazil-2018-02-21.toml  canada-2017-09-05.toml  canada-ontario-2012-10-09.toml  clanton-well-2024-04-17.toml  cyprus-2020-01-21.toml  denmark-2020-11-07.toml  devon-2023-12-30.toml  elmshorn-2023-04-25.toml  federalsburg-2024-04-10.toml  flensburg-germany-2019-09-12.toml  florida-2021-04-13.toml  france-2018-05-03.toml  hallein-austria-2020-04-06.toml  hamburg-michigan-usa-2018-01-17.toml  houston-texas-usa-2019-12-05.toml  italy-2020-02-28.toml  junction-city-2022-09-26.toml  kingsport-2023-08-02.toml  longden-england-2022-04-18.toml  mediterranean-2019-08-16.toml  michigan-usa-2021-02-27.toml  missouri-usa-2019-11-12.toml  muskogee-2023-01-20.toml  netherlands-2019-09-12.toml  new-york-usa-2020-12-02.toml  new-zeland-2022-07-07.toml  no-altitudes-california-usa-2012-04-22.toml  ontario-canada-2022-04-18.toml  poland-2020-01-05.toml  porto-portugal-2023-05-20.toml  prescott-arizona-usa-2020-02-16.toml  puerto-rico-2020-01-17.toml  quartzsite-2023-12-29.toml  ribbeck-2024-01-21.toml  saint-pierre-le-viger-2023-02-13.toml  saint-symphorien-2023-03-24.toml  salt-lake-city-2022-08-13.toml  (+9 more)
failed_tests/: test_1043.06.toml  test_18226.36.toml  test_2140.45.toml  test_5361.64.toml  test_538.56.toml  test_8120.27.toml
fetch-imo/: Cargo.toml
histogram/: Cargo.toml
kml2toml/: Makefile  README.md  TODO.md  kml.kml  kml.toml  kml2toml.cpp  tz-superbolid-26062023.docx
parse-somerset-traj/: 20220516T204421_UT_trajectory.kml  Cargo.toml
parse-somerset-traj/src/: main.rs
scad-gen/: Cargo.toml
scad-gen/src/: constructors.rs  document.rs  element.rs  lib.rs  objects.rs  scad_value.rs  scope.rs  vector.rs
src/: approx_eq.rs  aprox_eq.rs  constants.rs  data.rs  db.rs  lib.rs  main.rs  maths.rs  params.rs  quick_median.rs  solver.rs  structs.rs  util.rs
src/solver/: pair.rs
src/structs/: line.rs  (+3 more)
tests/: integration_test.rs
visualize/: Makefile  build.ts  tsconfig.json
(+6 files in other folders)
