[package]
name = "fireball"
version = "0.1.0"
authors = ["Max Verevkin"]
description = "This program aims to reconstruct the trajectory of a fireball given only data collected from witnesses"
edition = "2021"

[dependencies]
rand_distr = "0.4"
rand = { version = "0.8", features = ["nightly", "small_rng"] }
assert_approx_eq = "1.1"

toml = "0.5"
serde = { version = "1", features = ["derive"] }

clap = { version = "2", default-features = false }

scad-gen = { path = "../scad-gen" }
histogram = { path = "../histogram" }

[dev-dependencies]
proptest = "1.0"
