[package]
name = "fireball"
version = "0.1.0"
authors = ["Max Verevkin"]
description = "This program aims to reconstruct the trajectory of a fireball given only data collected from witnesses"
edition = "2021"

[workspace]
members = [
    "da-corrector",
	"coomon",
	"scad-gen",
	"fetch-imo",
]

[dependencies]
common = { path = "./common" }

assert_approx_eq = "1.1"

toml = "0.5"
serde = { version = "1", features = ["derive"] }

clap = { version = "2", default-features = false }

scad-gen = { path = "./scad-gen" }
image = { version = "0.24.5", default-features = false, features = ["png"] }

[dev-dependencies]
proptest = "1.0"
criterion = "0.3"

[[bench]]
name = "lambda"
harness = false
