[package]
name = "fireball"
version = "0.1.0"
authors = ["Max Verevkin"]
description = "This program aims to reconstruct the trajectory of a fireball given only data collected from witnesses"
edition = "2021"

[workspace]
members = [
	"common",
  "da-corrector",
	"azimuth-corrector",
	"altitudes",
]

[dependencies]
common = { path = "./common" }
assert_approx_eq = "1.1"
toml = "0.7"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
rayon = "1"

[dev-dependencies]
proptest = "1.0"
criterion = "0.4"

[[bench]]
name = "lambda"
harness = false
